--- a/crud-demo-docker/src/main/resources/application.properties
+++ b/crud-demo-docker/src/main/resources/application.properties
@@ -4,9 +4,9 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 # DataSource Configuration
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
+spring.datasource.url=jdbc:postgresql://postgres:5432/user_management1
+spring.datasource.username=admin
+spring.datasource.password=admin
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 
