added prometheus and graffana updated the docker-compose.yaml and dependencies

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 
 
+management.endpoints.web.exposure.include=prometheus
+management.metrics.export.prometheus.enabled=true
+
